bug fix on register pages
fixed the modal not showing issue. new modals.css file created to handle the modals for the register pages

--- a/Styles/sidebar.css
+++ b/Styles/sidebar.css
@@ -72,7 +72,8 @@
 }
 .nav-icon:not(.active):hover img {
   width: 60%;
-  transition: 0.3s;
+  transition: 0.1s;
+  scale: 1.3;
 }
 
 .active {
